Fixed jQueryEpiloggerGallery bug which caused images shifting after selection

--- a/Epilogger.Web/Public/js/jQueryEpiloggerGallery/css/jqueryEpiloggerGallery.css
+++ b/Epilogger.Web/Public/js/jQueryEpiloggerGallery/css/jqueryEpiloggerGallery.css
@@ -1,6 +1,11 @@
+.unselectedImage {
+    margin: 1px;    
+}
+
 .selectedImage
 {
     border-style: solid;
     border-width: 1px;
     border-color: red;
+    margin: 0px;
 }
